--- a/package.json
+++ b/package.json
@@ -7,13 +7,29 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "monaco-editor": "^0.29.1",
+    "monaco-editor-textmate": "^3.0.0",
+    "monaco-textmate": "^3.0.1",
+    "onigasm": "^2.2.5",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-icons": "^4.3.1",
+    "react-router-dom": "^5.3.0",
+    "uuid": "^8.3.2",
+    "vite-plugin-rewrite-all": "^0.1.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.3.2",
+    "@types/uid-safe": "^2.1.2",
+    "@types/uuid": "^8.3.1",
     "@vitejs/plugin-react": "^1.0.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.3.11",
+    "sass": "^1.43.4",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.3.2",
     "vite": "^2.6.4"
   }
