--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "@types/benchmark": "^2.1.1",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "benchmark": "^2.1.4",
     "monaco-editor": "^0.29.1",
     "monaco-editor-textmate": "^3.0.0",
     "monaco-textmate": "^3.0.1",
@@ -15,7 +17,9 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
+    "react-monaco-editor": "^0.46.0",
     "react-router-dom": "^5.3.0",
+    "react-toastify": "^8.0.3",
     "uuid": "^8.3.2",
     "vite-plugin-rewrite-all": "^0.1.2"
   },
