--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "@types/benchmark": "^2.1.1",
-    "@vitejs/plugin-react-refresh": "^1.3.6",
     "benchmark": "^2.1.4",
     "monaco-editor": "^0.29.1",
     "monaco-editor-textmate": "^3.0.0",
@@ -20,10 +18,10 @@
     "react-monaco-editor": "^0.46.0",
     "react-router-dom": "^5.3.0",
     "react-toastify": "^8.0.3",
-    "uuid": "^8.3.2",
-    "vite-plugin-rewrite-all": "^0.1.2"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/benchmark": "^2.1.1",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
