--- a/package.json
+++ b/package.json
@@ -8,24 +8,24 @@
   },
   "dependencies": {
     "benchmark": "^2.1.4",
-    "monaco-editor": "^0.29.1",
+    "monaco-editor": "^0.30.1",
     "monaco-editor-textmate": "^3.0.0",
     "monaco-textmate": "^3.0.1",
     "onigasm": "^2.2.5",
+    "prismjs": "^1.25.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
-    "react-monaco-editor": "^0.46.0",
     "react-router-dom": "^5.3.0",
     "react-toastify": "^8.0.3",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/benchmark": "^2.1.1",
+    "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
-    "@types/uid-safe": "^2.1.2",
     "@types/uuid": "^8.3.1",
     "@vitejs/plugin-react": "^1.0.0",
     "autoprefixer": "^10.4.0",
