--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "onigasm": "^2.2.5",
     "prismjs": "^1.25.0",
     "react": "^17.0.0",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.0",
     "react-icons": "^4.3.1",
     "react-router-dom": "^5.3.0",
@@ -24,6 +25,7 @@
     "@types/benchmark": "^2.1.1",
     "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.0",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
     "@types/uuid": "^8.3.1",
